--- a/test-output/SparkReports/dashboard.html
+++ b/test-output/SparkReports/dashboard.html
@@ -58,7 +58,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Sep 3, 2023 08:16:58 AM</span>
+                    <span class="badge badge-primary">Sep 4, 2023 04:09:20 PM</span>
                 </a>
             </li>
         </ul>
@@ -80,6 +80,14 @@
             <i class="fa fa-tag"></i>
           </span>
           <span class="title">Tags</span>
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a id="nav-ex" class="dropdown-toggle" href="exception.html">
+          <span class="icon-holder">
+            <i class="fa fa-bug"></i>
+          </span>
+          <span class="title">Exception</span>
         </a>
       </li>
       <li class="nav-item dropdown">
@@ -108,11 +116,11 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='100%'>
-	                                    		<b>1</b> features passed
+	                                    	<div><small data-tooltip='0%'>
+	                                    		<b>0</b> features passed
                                     		</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='0%'><b>0</b> features failed, 
+	                                    		<small data-tooltip='100%'><b>1</b> features failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -130,9 +138,9 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='100%'><b>3</b> scenarios passed</small></div>
+	                                    	<div><small data-tooltip='66.667%'><b>2</b> scenarios passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='0%'><b>0</b> scenarios failed, 
+	                                    		<small data-tooltip='33.333%'><b>1</b> scenarios failed, 
 	                                    		<b data-tooltip='0%'>0</b> others
 	                                    		</small>
                                     		</div>
@@ -150,10 +158,10 @@
 	                                        </div>
 	                                    </div>
 	                                    <div class="card-footer">
-	                                    	<div><small data-tooltip='100%'><b>27</b> steps passed</small></div>
+	                                    	<div><small data-tooltip='92.593%'><b>25</b> steps passed</small></div>
 	                                    	<div>
-	                                    		<small data-tooltip='0%'><b>0</b> steps failed, 
-	                                    		<b data-tooltip='0%'>0</b> others
+	                                    		<small data-tooltip='3.704%'><b>1</b> steps failed, 
+	                                    		<b data-tooltip='3.704%'>1</b> others
 	                                    		</small>
                                     		</div>
 	                                    </div>
@@ -170,7 +178,7 @@
 													<h2 class="font-size-28 font-weight-light">1</h2>
 													<span class="text-semibold text-success font-size-15">
 													<i class="ti-arrow-up font-size-11"></i> 
-														<span>100.00%</span>
+														<span>.00%</span>
 													</span>
 												</div>
 												<div class="align-self-end">
@@ -189,7 +197,7 @@
 													<h2 class="font-size-28 font-weight-light">3</h2>
 													<span class="text-semibold text-success font-size-15">
 													<i class="ti-arrow-up font-size-11"></i> 
-														<span>100.00%</span>
+														<span>66.67%</span>
 													</span>
 												</div>
 												<div class="align-self-end">
@@ -205,7 +213,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">Sep 3, 2023 08:16:58 AM</h6>
+													<h6 class="font-weight-light">Sep 4, 2023 04:09:20 PM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -221,7 +229,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Duration</p>
-													<h6 class="font-weight-light">0h 1m 12s+465ms</h6>
+													<h6 class="font-weight-light">0h 1m 47s+400ms</h6>
 													<span class="text-semibold font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -275,11 +283,11 @@
 													</tr>
 													<tr>
 														<td>@Regression</td>
-														<td>4</td>
-														<td>0</td>
+														<td>2</td>
+														<td>2</td>
 														<td>0</td>
 														<td>
-															100%
+															50%
 														</td>
 													</tr>
 												</tbody>
@@ -296,38 +304,38 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 1,
-				failParent: 0,
+				passParent: 0,
+				failParent: 1,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 0,
+				exceptionsParent: 1,
 				childCount: 3,
-				passChild: 3,
-				failChild: 0,
+				passChild: 2,
+				failChild: 1,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
 				infoChild: 0,
 				debugChild: 0,
-				exceptionsChild: 0,
+				exceptionsChild: 1,
 				grandChildCount: 27,
-				passGrandChild: 27,
-				failGrandChild: 0,
+				passGrandChild: 25,
+				failGrandChild: 1,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
 				warningGrandChild: 0,
-				skipGrandChild: 0,
+				skipGrandChild: 1,
 				infoGrandChild: 0,
 				debugGrandChild: 0,
-				exceptionsGrandChild: 0,
+				exceptionsGrandChild: 2,
 			};
 		</script>
 		<script>
 			var timeline = {
-			        "Validate PwCDigital Application":71.414
+			        "Validate PwCDigital Application":106.983
 			};
 		</script>
 <script src="https://cdn.rawgit.com/extent-framework/extent-github-cdn/24cb10e/spark/js/script.js"></script>
